gl51-master/src/test/deca/context/invalid/testObject_rule3_24.deca
//Description
// Utilisation de return .. alors que type de renvoie est void

class A {
    void method(){
        int a = 2;
        return a; // On retourne int alors que le type de retour est void
    }
}
//passed
